# sushi_api

./: .env  .gitignore  Cargo.toml  generate_graphql.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20250426_024738_add_regions_table.rs  m20250508_022912_seed_regions_data.rs
src/: main.rs  query_root.rs
src/api/: mod.rs  regions.rs
src/entities/: mod.rs  prelude.rs  region.rs
src/models/: mod.rs  region.rs
tests/: api_test_helpers.rs  region_crud_test.rs  region_graphql_tests.rs  regions_api_test.rs  test_helpers.rs
use_cases/: regions_api.feature
