[package]
name = "sushi_api"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "migration" }
poem = { version = "1.3", features = ["test"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
sea-query = "0.30"
sea-orm-migration = "1.1"
uuid = { version = "1.3", features = ["v4"] }
spectral = "0.6.0"
cucumber = { version = "0.20.0", features = ["macros"] }

[workspace]
members = ["migration"]
